--- a/CSS/log.css
+++ b/CSS/log.css
@@ -1,6 +1,11 @@
 
 /*CSS LOGIN*/
 
+
+body{
+    background: #565454;
+}
+
 .container-login{
     display: flex;
     justify-content: center;
@@ -9,10 +14,9 @@
 }
 
 .row{
-    background:  rgb(221, 221, 226);
+    background:  rgb(204, 204, 208);
     border: solid #d6d5d5;
     border-radius: 10px;
-    padding-top: 50px;
     padding-bottom: 150px;
     padding-left: 100px;
     padding-right: 100px;
@@ -23,7 +27,10 @@
     display: flex;
     justify-content: center;
     font-size: 30px;
-    padding-bottom: 20px;
+}
+
+.row small{
+    font-size: 15px;
 }
 
 .row .inpus{
@@ -57,5 +64,9 @@
 .row .btn-l button:hover{
     color: #a9a8a8;
     background:rgb(12, 99, 176);
+}
+
+.row .btn-l button a {
+    text-decoration: none;
 }
 
