--- a/CSS/style.css
+++ b/CSS/style.css
@@ -47,7 +47,20 @@ html,body{
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    color: #fff;
+    color: #292828;
+}
+
+/*CENTER-IMG-HEADER-LEARNING*/
+.header-img-kip-learning{
+    background-image: url(http://localhost/support_kip/IMG/learnig.jpg);
+    height: 500px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    color: #393838;
 }
 
 nav{
