--- a/CSS/style.css
+++ b/CSS/style.css
@@ -39,7 +39,7 @@ html,body{
 
 /*CENTER-IMG-HEADER-sistema-kip*/
 .header-img-sistema-kip{
-    background-image: url(https://images.unsplash.com/photo-1642480532034-362360552ccb?q=80&w=1770&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+    background-image: url(http://localhost/support_kip/IMG/paleta_color.jpg);
     height: 500px;
     background-repeat: no-repeat;
     background-size: cover;
